added readme description and fixed layout of site

--- a/assets/style.css
+++ b/assets/style.css
@@ -18,3 +18,14 @@ ul {
     border-top: solid 1px black;
 }
 
+#forecast-content {
+    padding-top: 20px;
+
+}
+
+#forecast-content div {
+    background-color: rgb(2, 2, 36);
+    color: white;
+}
+
+
